# Mag

./: .gitignore  Cargo.toml  README.md
arch/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
cores/binid/: Cargo.toml
cores/binid/src/: formats.rs  lib.rs
cores/binid/src/formats/: elf.rs  elf64.rs
cores/dog/: Cargo.toml
cores/dog/src/: lib.rs
logging/: Cargo.toml
logging/src/: lib.rs
mag/: Cargo.toml
mag/src/: main.rs
modes/dev/: Cargo.toml
modes/dev/src/: commands.rs  lib.rs
modes/dev/src/commands/: dsm.rs  id.rs
modes/dog_face/: Cargo.toml
modes/dog_face/src/: commands.rs  lib.rs
modes/dog_face/src/commands/: bark.rs  count.rs
tests/: Cargo.toml
tests/samples/: d32  d64  r32  r64  s32  s64  sample.c
tests/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
