[package]
name = "mag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
log = "0.4.20"

dog = { path="../cores/dog" }
dog_face = { path = "../modes/dog_face" }
arch = { path = "../arch" }
utils = { path = "../utils"}
logging = { path = "../logging"}
